[metadata]
name = nest_asyncio
version = 1.6.0
author = Ewald R. de Wit
author_email = ewald.de.wit@gmail.com
license = BSD
license_files = LICENSE
description = Patch asyncio to allow nested event loops
keywords = asyncio, nested, eventloop
url = https://github.com/erdewit/nest_asyncio
long_description = file: README.rst
long_description_content_type = text/x-rst
classifiers =
    Development Status :: 5 - Production/Stable
    Intended Audience :: Developers
    License :: OSI Approved :: BSD License
    Programming Language :: Python :: 3.5
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
    Programming Language :: Python :: 3.12
    Programming Language :: Python :: 3 :: Only
    Framework :: AsyncIO

[options]
py_modules = nest_asyncio
python_requires = >=3.5

[flake8]
ignore = D205,D400,W503